# speech_to_ppt

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
speech_to_ppt/: explanation.py  pipeline.py  presentation.py  transcription.py
